--- a/views/property_mywishes.html
+++ b/views/property_mywishes.html
@@ -2,27 +2,29 @@
 
 {% block contenido_principal %}
 <div class="container">
-    <h2>Mis Deseos</h2>
+    <h2 class="sectionHeader">Mis Deseos</h2>
 
     <div class="table-responsive">
         <table class="table table-hover">
-            <thead>
+            <thead class="thead-dark">
             <tr>
-                <th>Nombre</th>
-                <th>Tipo</th>
-                <th>Precio</th>
-                <th class="col-md-1"></th>
+                <th scope="col">Nombre</th>
+                <th scope="col">Tipo</th>
+                <th scope="col">Tipo De Operación</th>
+                <th scope="col">Precio</th>
+                <th scope="col"></th>
             </tr>
             </thead>
             <tbody>
             {% for property in properties %}
             <tr>
-                <td>{{ property.name }}</td>
-                <td>{{ property.type }}</td>
+                <td scope="row"><span class="font-weight-bold">{{ property.name }}</span></td>
+                <td class="text-capitalize">{{ property.type }}</td>
                 <td>{{ property.price }}</td>
+                <td>{{ property.typeOp }}</td>
                 <td>
-                    <a class="btn btn-danger float-right" href="/properties/saved/delete/{{ property._id.toString() }}">Eliminar</a>
-                    <br>
+                    <a class="btn btn-danger float-right" href="/wishes/delete/{{ property._id.toString() }}">Eliminar</a>
+                    <a class="btn-wishes btn btn-secondary float-right" href="/properties/{{ property._id.toString() }}">Ver</a>
                 </td>
             </tr>
             {% endfor %}
