--- a/public/styles/css/style.css
+++ b/public/styles/css/style.css
@@ -1,3 +1,17 @@
+
+.footer {
+    width: 100%;
+    background-color: #373737;
+    height: 7em;
+    color: white;
+    text-align: center;
+    justify-content: center;
+    padding-top: 1.5em;
+}
+.btn-wishes{
+    margin-right: 0.5em;
+}
+
 .imgLogo {
     width: 100%;
     height: 100%;
@@ -54,8 +68,34 @@
     margin-top: 1.5em;
 }
 
+.div-field-bottom{
+    margin-bottom: 1.5em;
+}
+
+.inline-form{
+    display: inline;
+}
+
+#ownerDetails{
+    margin-top: 1.5em;
+    text-align: center;
+    background-color: #E0E0E0;
+    border-radius: 0.25em;
+}
+
 .field-icon{
     justify-content: center;
+}
+
+.centeredComponent{
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.footerP{
+    margin: 0.2em;
+    padding: 0;
+    font-size: 0.75em;
 }
 
 .buttonOverview{
@@ -68,20 +108,16 @@
     margin-top: 1em;
 }
 
-.overviewDiv{
-    font-size: 1.1em;
-    padding : 1.5em;
-    background-color: #C8C8C8;
-    color: black;
-}
-
 .msgInfoUser{
     text-align: center;
     margin: 1em;
 }
 
 .displayDiv{
-    margin-top: 4em;
+    margin-top: 1.5em;
+    background-color: #E0E0E0;
+    padding: 2em;
+    border-radius: 0.25em;
 }
 
 .listaInfo{
