--- a/views/base.html
+++ b/views/base.html
@@ -142,8 +142,10 @@
                             class="fas fa-user"></span>{{user.email}}</a>
                     <div class="dropdown-menu">
                         <a class="dropdown-item" href="/user/edit">Editar Perfil</a>
+                        {% if user.permission != 'S'%}
                         <a class="dropdown-item" data-toggle="modal" data-target="#modeloEliminarPerfil">Eliminar
                             Perfil</a>
+                        {% endif %}
                     </div>
                 </li>
                 <li class="nav-item active">
