Editar y eliminar propiedad

--- a/views/property_details.html
+++ b/views/property_details.html
@@ -610,7 +610,9 @@
                 marker.addTo(mapaLocal);
 
             } else {
-                $('#divMapNotLoaded').show();
+                let type = '{{property.type}}'
+                if (type != 'suelo')
+                    $('#divMapNotLoaded').show();
             }
         });
     }
