Editar un campo de vivienda

--- a/views/property_add.html
+++ b/views/property_add.html
@@ -151,7 +151,7 @@
                             </option>
                             <option value="3">3
                             </option>
-                            <option value="4">4 o mas
+                            <option value="4 o mas">4 o mas
                             </option>
                         </select>
                     </div>
@@ -166,7 +166,7 @@
                             </option>
                             <option value="3">3
                             </option>
-                            <option value="4">4 o mas
+                            <option value="4 o mas">4 o mas
                             </option>
                         </select>
                     </div>
@@ -249,7 +249,7 @@
                             </option>
                             <option value="3">3
                             </option>
-                            <option value="4">4 o mas
+                            <option value="4 o mas">4 o mas
                             </option>
                         </select>
                     </div>
