--- a/views/property_modify.html
+++ b/views/property_modify.html
@@ -120,7 +120,7 @@
                             </option>
                             <option value="3">3
                             </option>
-                            <option value="4">4 o mas
+                            <option value="4 o mas">4 o mas
                             </option>
                         </select>
                         <script> $("#numHabs").val('{{property.numHabs}}'); </script>
@@ -136,7 +136,7 @@
                             </option>
                             <option value="3">3
                             </option>
-                            <option value="4">4 o mas
+                            <option value="4 o mas">4 o mas
                             </option>
                         </select>
                         <script> $("#numBan").val('{{property.numBan}}'); </script>
@@ -264,7 +264,7 @@
                             </option>
                             <option value="3">3
                             </option>
-                            <option value="4">4 o mas
+                            <option value="4 o mas">4 o mas
                             </option>
                         </select>
                         <script> $("#numAsLoc").val('{{property.numAseos}}'); </script>
