--- a/views/base.html
+++ b/views/base.html
@@ -78,20 +78,25 @@
 <div id="containerParent">
     <!-- Barra de Navegación superior -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="/properties">
+        <a class="navbar-brand" href="/">
             <img class="imgLogo" src="/img/logo.png" alt="logo"/>
         </a>
         <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item active" id="mTienda">
-                    <a class="nav-link" href="/properties">Inicio</a>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle active" href="#" data-toggle="dropdown">Inicio</a>
+                    <div class="dropdown-menu">
+                        <a class="dropdown-item" href="/properties/suelo">Suelos</a>
+                        <a class="dropdown-item" href="/properties/local">Locales</a>
+                        <a class="dropdown-item" href="/properties/vivienda">Viviendas</a>
+                    </div>
                 </li>
                 <li class="nav-item active">
                     <a class="nav-link" href="/info">Contacto</a>
                 </li>
                 {% if user.permission == 'A' || user.permission == 'S' %}
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown">Propiedades</a>
+                    <a class="nav-link dropdown-toggle active" href="#" data-toggle="dropdown">Propiedades</a>
                     <div class="dropdown-menu">
                         <a class="dropdown-item" href="/properties/add">Añadir Propiedad</a>
                         <a class="dropdown-item" href="/myproperties">Mis Propiedades</a>
@@ -100,15 +105,17 @@
                 {% endif %}
                 {% if user.permission == 'U' %}
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown">Propiedades</a>
+                    <a class="nav-link dropdown-toggle active" href="#" data-toggle="dropdown">Propiedades</a>
                     <div class="dropdown-menu">
                         <a class="dropdown-item" href="/wishes">Propiedades Guardadas</a>
                     </div>
                 </li>
                 {% endif %}
+                {% if user.permission != undefined  %}
                 <li class="nav-item active">
                     <a class="nav-link" href="/messages">Mensajes</a>
                 </li>
+                {% endif %}
             </ul>
 
             <ul class="navbar-nav navbar-right">
@@ -117,7 +124,7 @@
                     <a class="nav-link" href="/login"><span class="fas fa-user"></span> Iniciar Sesión</a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="/signin"><span class="fas fa-user-plus"></span> Registrate</a>
+                    <a class="nav-link" href="/signin"><span class="fas fa-user-plus"></span> Regístrate</a>
                 </li>
                 {% endif %}
                 {% if user != null %}
